# the-workshop

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  COMPATIBILITY.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.afk/: config.toml  question.md
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/docs/: project.md
.github/workflows/: ci.yml  mirror.yml
core/hooks/: protect-files.py  snapshot-subagent-start.py  verify-subagent-evidence.py
docs/archive/: dev-first-integration-guard.md  gitlab-mr-create-guard.md  router-policy-and-afk-guard.md
docs/dev-cycle/: last-run.md  quarantine-log.md  telemetry.jsonl
docs/plans/: setup-hooks.md
docs/reference/: agents.md  build-and-wiring.md  hooks.md  methodology.md  presets.md  skills.md
presets/advisor-product-design/: manifest.json
presets/advisor-product-strategy/: manifest.json
presets/analysis/: manifest.json
presets/claude-tooling/: manifest.json
presets/data-pipeline/: manifest.json
scripts/: build_docs.py  build_marketplace.py  build_preset.py  check_version_bumps.py  dev_cycle_validate.py  discover_skill_test_suites.py  smoke_test.py
tests/: conftest.py  test_afk_agent_prompt.py  test_audit_config_change_hook.py  test_build.py  test_build_docs.py  test_ci_configuration.py  test_dev_cycle_validate.py  test_frontmatter.py  test_gate_wiring.py  test_gitignore.py  test_gitlab_skill_boundaries.py  test_hook_script_wiring.py  test_hooks_fail_open.py  test_inject_persona.py  test_installer_bundle.py  test_installer_claude_adapter.py  test_installer_cli.py  test_installer_layering.py  test_installer_report.py  test_marketplace.py  test_model_dispatch_slot.py  test_post_edit_lint_hooks.py  test_protect_files.py  test_readme_generator.py  test_setup_hooks_skill.py  test_skill_cross_routing.py  test_skill_test_discovery.py  test_smoke.py  test_subagent_evidence_hooks.py  test_suggest_handoff_on_context_hook.py  test_trigger_overlap.py  test_validation.py  test_verify_tests_before_stop_hook.py  test_version_bump_gate.py  test_workflow_policy.py
(+134 files in other folders)
