[project]
name = "the-workshop"
version = "0.1.0"
description = "Portable AI dev-environment toolkit — skills, agents, hooks, and methodology that install natively on Claude Code, Codex, and Cortex Code"
requires-python = ">=3.12"

[project.scripts]
the-workshop = "scripts.installer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Lint scope is pinned explicitly rather than left to ruff's defaults, which
# vary by ruff version and (with no config present at all) pull in a broad
# stylistic set. These rules are the high-signal ones — real defects, not
# formatting: F (pyflakes: undefined names, unused imports, f-string bugs),
# E4 (imports), E7 (statement errors), E9 (syntax/IO errors).
#
# E501 (line-too-long) is deliberately excluded: it flags 104 existing lines
# and catches no defects. Widen this set only alongside fixing what it flags.
[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
